--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href=".style/style.css">
 </head>
 <body>
-    
+    <header class="cabecalho">
+        <h1>
+            Vai ser uma imagem aqui
+        </h1>
+        <nav>
+        <ul>
+            <li>Escola</li>
+            <li>Estudantes</li>
+        </ul>
+        </nav>
+    </header>
+
+    <section class="escola"></section>
+    <section class="estudantes"></section>
+
 </body>
 </html>
