--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             Vai ser uma imagem aqui
         </h1>
         <nav>
-        <ul>
-            <li>Escola</li>
-            <li>Estudantes</li>
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudantes</li>
         </ul>
         </nav>
     </header>
@@ -27,7 +27,32 @@
         </div>
         <img class="escola-imagem" src="imagem-escola.jpg" alt="imagem da escola">
     </section>
-    <section class="estudantes"></section>
+    <section class="estudantes">
+        <h2 class="estudantes-titulo">Quem são nossos estudantes?</h2>
+        <div class="estudantes-todos">
+            <div class="estudantes-div">
+                <img class="estudantes-imagem" src="" alt="foto do estudante">
+                <h3 class="estudantes-nome">Nome do estudante</h3>
+                <a href="#"><img class="estudantes-icone" src="" alt="telegram"></a>
+                <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
+            </div>
+
+            <div class="estudantes-div">
+                <img class="estudantes-imagem" src="" alt="foto do estudante">
+                <h3 class="estudantes-nome">Nome do estudante</h3>
+                <a href="#"><img class="estudantes-icone" src="" alt="telegram"></a>
+                <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
+            </div>
+
+            <div class="estudantes-div">
+                <img class="estudantes-imagem" src="" alt="foto do estudante">
+                <h3 class="estudantes-nome">Nome do estudante</h3>
+                <a href="#"><img class="estudantes-icone" src="" alt="telegram"></a>
+                <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
+            </div>
+            
+        </div>
+    </section>
 
 </body>
 </html>
