--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
                 <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
             </div>
             
+            <div class="estudantes-div">
+                <img class="estudantes-imagem" src="" alt="foto do estudante">
+                <h3 class="estudantes-nome">Nome do estudante</h3>
+                <a href="#"><img class="estudantes-icone" src="" alt="telegram"></a>
+                <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
+            </div>
+
         </div>
     </section>
 
