--- a/index.html
+++ b/index.html
@@ -31,45 +31,45 @@
     <div class="estudantes-todos">
 
       <div class="estudantes-div">
-        <img class="estudantes-imagem" src="" alt="foto do estudante">
-        <h3 class="estudantes-nome">Nome do estudante</h3>
-        <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
-        <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>  
+        <img class="estudantes-imagem" src="./imagem/student.png" alt="foto do estudante">
+        <h3 class="estudantes-nome">jô soares</h3>
+        <a href="#"><img class="estudantes-icone" src="./imagem/instagram.jpeg" alt="instagram"></a>
+        <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>  
       </div>
 
       <div class="estudantes-div">
-        <img class="estudantes-imagem" src="" alt="foto do estudante">
-        <h3 class="estudantes-nome">Nome do estudante</h3>
-        <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
-        <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>  
+        <img class="estudantes-imagem" src="./imagem/student(1).png" alt="foto do estudante">
+        <h3 class="estudantes-nome">RubensValdo</h3>
+        <a href="#"><img class="estudantes-icone" src="./imagem/instagram.jpeg" alt="instagram"></a>
+        <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>  
       </div>
       
       <div class="estudantes-div">
-        <img class="estudantes-imagem" src="" alt="foto do estudante">
-        <h3 class="estudantes-nome">Nome do estudante</h3>
-        <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
-        <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>  
+        <img class="estudantes-imagem" src="./imagem/student(6).png" alt="foto do estudante">
+        <h3 class="estudantes-nome">LeitosValdo</h3>
+        <a href="#"><img class="estudantes-icone" src="./imagem/instagram.jpeg" alt="instagram"></a>
+        <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>  
       </div>
 
       <div class="estudantes-div">
-        <img class="estudantes-imagem" src="" alt="foto do estudante">
+        <img class="estudantes-imagem" src="./imagem/student(3).png" alt="foto do estudante">
         <h3 class="estudantes-nome">Nome do estudante</h3>
-        <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
-        <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>  
+        <a href="#"><img class="estudantes-icone" src="./imagem/instagram.jpeg" alt="instagram"></a>
+        <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>  
       </div>
 
       <div class="estudantes-div">
-        <img class="estudantes-imagem" src="" alt="foto do estudante">
+        <img class="estudantes-imagem" src="./imagem/student(4).png" alt="foto do estudante">
         <h3 class="estudantes-nome">Nome do estudante</h3>
-        <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
-        <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>  
+        <a href="#"><img class="estudantes-icone" src="./imagem/instagram.jpeg" alt="instagram"></a>
+        <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>  
       </div>
 
       <div class="estudantes-div">
-        <img class="estudantes-imagem" src="" alt="foto do estudante">
+        <img class="estudantes-imagem" src="./imagem/student(5).png" alt="foto do estudante">
         <h3 class="estudantes-nome">Nome do estudante</h3>
-        <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
-        <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>  
+        <a href="#"><img class="estudantes-icone" src="./imagem/instagram.jpeg" alt="instagram"></a>
+        <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>  
       </div>
       
     </div>
