--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="cabecalho">
     <h1>
-      Vai ser uma imagem aqui
+      <img scr="./imagem/julio.png" class="cabecalho-imagem" alt="logo da escola">
     </h1>
       <ul class="cabecalho-lista">
       <li class="cabecalho-lista-item">Escola</li>
@@ -53,14 +53,14 @@
 
       <div class="estudantes-div">
         <img class="estudantes-imagem" src="./imagem/student(3).png" alt="foto do estudante">
-        <h3 class="estudantes-nome">Nome do estudante</h3>
+        <h3 class="estudantes-nome">GordoLeão bonaparte</h3>
         <a href="#"><img class="estudantes-icone" src="./imagem/instagram.jpeg" alt="instagram"></a>
         <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>  
       </div>
 
       <div class="estudantes-div">
         <img class="estudantes-imagem" src="./imagem/student(4).png" alt="foto do estudante">
-        <h3 class="estudantes-nome">Nome do estudante</h3>
+        <h3 class="estudantes-nome">LeitosValdo</h3>
         <a href="#"><img class="estudantes-icone" src="./imagem/instagram.jpeg" alt="instagram"></a>
         <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>  
       </div>
