--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       
       <div class="estudantes-div">
         <img class="estudantes-imagem" src="./imagem/student(6).png" alt="foto do estudante">
-        <h3 class="estudantes-nome">LeitosValdo</h3>
+        <h3 class="estudantes-nome">CalvosValdo</h3>
         <a href="#"><img class="estudantes-icone" src="./imagem/instagram.jpeg" alt="instagram"></a>
         <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>  
       </div>
@@ -67,7 +67,7 @@
 
       <div class="estudantes-div">
         <img class="estudantes-imagem" src="./imagem/student(5).png" alt="foto do estudante">
-        <h3 class="estudantes-nome">Nome do estudante</h3>
+        <h3 class="estudantes-nome">Carlos</h3>
         <a href="#"><img class="estudantes-icone" src="./imagem/instagram.jpeg" alt="instagram"></a>
         <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>  
       </div>
