--- a/index.html
+++ b/index.html
@@ -75,5 +75,10 @@
     </div>
   </section>
   
+<footer class="rodape">
+  <h4>Produzido por João Pedro Zibarth dos Santos - 2B </h4>
+  <img class="rodape-imagem" src="./imagem/github.png">
+</footer>
+
 </body>
 </html>
