--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section class="estudantes">
     <h2 class="estudantes-titulo">Quem são nossos estudantes</h2>
     <div class="estudantes-todos">
-
+<span></span>
       <div class="estudantes-div">
         <img class="estudantes-imagem" src="./imagem/student.png" alt="foto do estudante">
         <h3 class="estudantes-nome">jô soares</h3>
