--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     </h1>
       <ul class="cabecalho-lista">
       <li class="cabecalho-lista-item">Escola</li>
-      <li class="cabecalho-lista-item">Estudantes</li>
+      <li class="cabecalho-lista-item"><a href="#escola-titulo">Estudantes</a></li>
     </ul>
         </header>
 
   <section class="escola">
     <div class="escola-conteudo">
-      <h2 class="escola-titulo">Sobre a escola</h2>
-      <p class="escola-texto-um">Descrição da escola</p>
+      <h2 id="escola-titulo">Sobre a Escola</h2>
+      <p class="escola-texto-um">Melhor escola da região</p>
       <p class="escola-texto-dois">Descrição da turma</p>
       </div>
       <img class="escola-imagem" src="imagem-escola.jpg" alt="imagem da escola"> 
@@ -75,11 +75,10 @@
       
     </div>
   </section>
-  
+
 <footer class="rodape">
   <h4>Produzido por João Pedro Zibarth dos Santos - 2B </h4>
   <img class="rodape-imagem" src="./imagem/github.png">
 </footer>
-
 </body>
 </html>
