--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="escola-conteudo">
       <h2 id="escola-titulo">Sobre a Escola</h2>
       <p class="escola-texto-um">Melhor escola da região</p>
-      <p class="escola-texto-dois">Descrição da turma</p>
+      <p class="escola-texto-dois">Curso técnico</p>
       </div>
       <img class="escola-imagem" src="imagem-escola.jpg" alt="imagem da escola"> 
   </section>
@@ -33,7 +33,7 @@
       <div class="estudantes-div">
         <img class="estudantes-imagem" src="./imagem/student.png" alt="foto do estudante">
         <h3 class="estudantes-nome">jô soares</h3>
-        <a href="#"><img class="estudantes-icone" src="./imagem/instagram.jpeg" alt="instagram"></a>
+        <a href="#https://www.ebiografia.com/jo_soares/"><img class="estudantes-icone" src="./imagem/instagram.jpeg" alt="instagram"></a>
         <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>  
       </div>
 
