--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="estudantes-div">
         <img class="estudantes-imagem" src="./imagem/student.png" alt="foto do estudante">
         <h3 class="estudantes-nome">jô soares</h3>
-        <a href="#www.ebiografia.com/jo_soares/"><img class="estudantes-icone" src="./imagem/instagram.jpeg" alt="instagram"></a>
+        <a href="#https:/www.ebiografia.com/jo_soares/"><img class="estudantes-icone" src="./imagem/instagram.jpeg" alt="instagram"></a>
         <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>  
       </div>
 
